# reverse-geocoding-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
benches/: benchmark.rs
client/: Cargo.toml  README.md
client/src/: client.rs  config.rs
profiling/: dhat.out.29531  massif.out.26292  memcheck.out
src/: cache.rs  commands.rs  config.rs  geocoding.rs  io.rs  lib.rs  logger.rs  main.rs  number.rs  socket.rs  types.rs
tests/: geocoding.rs
tests/cache/: cache.rs
tests/geocoding/: geocoding.rs
