[package]
name = "reverse-geocoding-client"
version = "0.1.0"
edition = "2021"
authors = ["Amrane Ait Zeouay <a.zeouayamra@gmail.com>"]
repository = "https://github.com/amraneze/reverse-geocoding-rust"
description = "A client to test Reverse Geocoding sockets."
keywords = ["reverse", "geocoding", "latitude", "longitude", "memory"]

[[bin]]
name = "reverse-geocoding-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }